# okama

./: .coverage  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  Assets Plots.ipynb  Assets Posts.ipynb  Assets.ipynb  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Currencies.ipynb  EF pairs plot.ipynb  Efficiend Frontier Reb.ipynb  Efficiend Frontier.ipynb  Efficient Frontier.ipynb  Indexes.ipynb  LICENSE.txt  Monte Carlo.ipynb  NaN.ipynb  README.md  SP500.ipynb  Seaborn.ipynb  Transition Map.ipynb  assets.py  context7.json  data.py  frontier.py  main.py  main_notebook.ipynb  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  skills-lock.json  t_test_portfolio_dividends_annual.py  (+2 more)
.agents/skills/create-readme/: SKILL.md
.claude/skills/: create-readme
.claude/skills/make-release/: SKILL.md
.github/workflows/: black.yml  codeql-analysis.yml  flake8.yml  ruff.yml
.idea_backup/: csv-plugin.xml  misc.xml
.idea_backup/inspectionProfiles/: Project_Default.xml
.ipynb_checkpoints/: assets-checkpoint.py  main_notebook-checkpoint.ipynb
docs/: .coverage  conf.py  index.rst  make.bat  okama.namespaces.rst  okama.search.rst  okama.symbols_in_namespace.rst  quickstart.nblink  readthedocs.yaml  requirements.txt  rst.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: modules.doctree  okama.api.doctree  okama.common.doctree  okama.doctree  okama.frontier.doctree  test.doctree
docs/_build/doctrees/stubs/: okama.Asset.doctree  okama.AssetList.doctree  okama.Portfolio.doctree  okama.assets.Asset.doctree  okama.assets.AssetList.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_static/: documentation_options.js
docs/_build/html/source/: modules.html  okama.api.html  (+4 more)
docs/_templates/: custom-class-template-no-inherited.rst  custom-class-template.rst
docs/jupyter/: funds.nblink  portfolio.nblink  quickstart.nblink
docs/matplotlib_ext/: docscrape.py  docscrape_sphinx.py
docs/source/: asset_list.rst  multi_period.rst  okama.common.rst  okama.frontier.rst  plots.rst  portfolio.rst  single_period.rst  test.rst
docs/stubs/: okama.Asset.rst
docs/superpowers/plans/: 2026-06-03-monte-carlo-irr.md  2026-06-03-portfolio-dcf-irr.md  2026-06-04-find-largest-withdrawals-stage1-brent.md  2026-06-04-find-largest-withdrawals-stage2-vectorize.md  2026-06-04-mc-cashflow-engine-irr-and-fixes.md  2026-06-07-portfolio-tracking-error.md  2026-07-14-local-name-label.md
docs/superpowers/specs/: 2026-06-03-monte-carlo-irr-design.md  2026-06-03-portfolio-dcf-irr-design.md  2026-06-04-find-largest-withdrawals-speedup-design.md  2026-06-07-portfolio-tracking-error-design.md  2026-07-14-local-name-label-design.md
examples/: 01 howto.ipynb  02 index funds perfomance.ipynb  03 efficient frontier single period.ipynb  03 investment portfolios.ipynb  04 efficient frontier multi-period.ipynb  04 efficient frontier single period.ipynb  04 investment portfolios with DCF.ipynb  05 efficient frontier multi-period.ipynb  05 macroeconomics - inflation rates.ipynb  06 backtesting distribution.ipynb  06 efficient frontier single period.ipynb  07 efficient frontier multi-period.ipynb  07 forecasting.ipynb  08 backtesting distribution.ipynb  08 financial database.ipynb  09 financial database.ipynb  09 forecasting.ipynb  10 forecasting.ipynb  10 rebalancing portfolio.ipynb  11 rebalancing portfolio.ipynb  README.md
notebooks/: 01 howto.ipynb  02 index funds perfomance.ipynb  03 efficient frontier single period.ipynb  03 efficient frontier.ipynb  04 backtesting distribution.ipynb  04 efficient frontier multi-period.ipynb  05 backtesting distribution.ipynb  05 forecasting.ipynb  06 forecasting.ipynb  Efficient Frontier.ipynb  howto.ipynb  index funds perfomance.ipynb
okama/: __init__.py  asset.py  asset_list.py  assets.py  data.py  frontier.py  frontier_reb.py  helpers.py  macro.py  plots.py  portfolio.py  settings.py
okama/.ipynb_checkpoints/: frontier-checkpoint.py
okama/api/: api_methods.py  data_queries.py  namespaces.py  search.py
okama/common/: _decorators.py  error.py  helpers.py  make_asset_list.py  solver.py  validators.py
okama/common/helpers/: helpers.py  rates.py  ratios.py  rebalancing.py  tails.py
okama/frontier/: multi_period.py  single_period.py
okama/portfolios/: cashflow_strategies.py  core.py  dcf.py  dcf_calculations.py  mc.py
tests/: .pycrunch-config.yaml  conftest.py  pytest.ini  test_asset.py  test_asset_list.py  test_asset_mocking.py  test_assets.py  test_cash_flow.py  test_frontier.py  test_frontier_reb.py  test_helpers.py  test_list_maker.py  test_list_maker_mocking.py  test_macro.py  test_namespaces.py  test_parallelism.py  test_plots.py  test_portfolio.py  test_rebalance.py  test_rebalance_mocking.py  test_search.py  test_validators.py
tests/asset/: conftest.py  test_asset.py  test_asset_mocking.py
tests/asset_list/: conftest.py  test_asset_list.py  test_asset_list_inflation.py  test_asset_list_mocking.py
tests/asset_list/data/: asset_list.pkl  asset_list_describe.pkl  real_estate.pkl
tests/data/: asset_list.pkl  asset_list_describe.pkl  asset_list_lt.pkl  currencies.csv  currencies.pkl  eurusd_close_daily.pkl  portfolio.pkl  portfolio_description.pkl  portfolio_description_new.pkl  portfolio_description_no_inflation.pkl  real_estate.csv  real_estate.pkl  spy.csv  spy.pkl  test_plot_assets.csv  test_plot_pair_ef.csv  test_transition_map.csv  usdrub_adj_close.pkl  usdrub_close_daily.pkl  usdrub_close_monthly.pkl
tests/helpers/: factories.py
tests/portfolio/: conftest.py  test_cashflow.py  test_portfolio.py
tests/portfolio/dcf/: test_advanced_cashflow.py  test_cashflow.py  test_dcf_calculation_fixes.py  test_dcf_none_frequency.py  test_dcf_plot.py  test_find_largest_withdrawals.py  test_irr.py  test_mc_engine_benchmark.py  test_mc_engine_equivalence.py
tests/portfolio/mc/: conftest.py  test_mc.py  test_mc_seed.py  test_monte_carlo_irr.py
(+12 files in other folders)
