[tool.poetry]
name = "okama"
version = "1.3.0"
description = "Investment portfolio analyzing & optimization tools"
authors = ["Sergey Kikevich <chilango74@gmail.com>"]
license = "MIT"
homepage = "https://okama.io"
repository = "https://github.com/mbk-dev/okama"
documentation = "https://okama.readthedocs.io/en/master"
readme = "README.md"
keywords = ["finance", "investments", "efficient frontier", "python", "optimization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8, <4.0.0"
pandas = ">=1.4.0, <=1.6.0"
scipy = "^1.9.0"
matplotlib = "^3.5.1"
requests = "^2.27.1"
joblib = "^1.1.0"
pillow = "<=9.1.0"  # delete after issue with installing 9.2.0 is resolved

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
black = "^22.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.0.0"
sphinx-rtd-theme = "^1.0.0"
numpydoc = "^1.2.1"
nbsphinx = "^0.8.8"
nbsphinx-link = "^1.3.0"
pandoc = "^2.2"
recommonmark = "^0.7.1"
Jinja2 = "3.0.3"

[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.15.0"
ipython = "^8.0.0"
nbmake = "^1.2"  # test jupyter notebooks


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
