[tool.poetry]
name = "okama"
version = "1.5.0"
description = "Investment portfolio analyzing & optimization tools"
authors = ["Sergey Kikevich <chilango74@gmail.com>"]
license = "MIT"
homepage = "https://okama.io"
repository = "https://github.com/mbk-dev/okama"
documentation = "https://okama.readthedocs.io/en/master"
readme = "README.md"
keywords = ["finance", "investments", "efficient frontier", "python", "optimization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
pandas = "^2.0.0"
scipy = ">=1.9.0"
matplotlib = ">=3.5.1"
requests = "*"
joblib = "*"
pandas-stubs = "*"

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "*"
black = {extras = ["jupyter"], version = "*"}
pytest-xdist = "*"
flake8 = "*"

[tool.poetry.group.docs]
optional = false

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
numpydoc = "*"
nbsphinx = "*"
nbsphinx-link = "*"
pandoc = "*"
recommonmark = "*"
Jinja2 = "*"

[tool.poetry.group.jupyter]
optional = false

[tool.poetry.group.jupyter.dependencies]
jupyter = "*"
notebook = "*"
ipykernel = "*"
ipython = "*"
nbmake = "*"  # test jupyter notebooks
zmq = "*"  # required to run pytest

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '/docs'
